--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.2
+Date: 2020-06-01
+
+  Changes:
+    - Remove untriggerable event
+    - Fix button reference
+---------------------------------------------------------------------------------------------------
 Version: 2.1.1
 Date: 2020-02-27
 
