Update for version 1.1
* Replace item_to_create with item_to_spawn
* Add missing tooltip
* Rename actions and items

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.2.0
+Date: 2020-12-05
+
+  Changes:
+    - Fixed for 1.1 release
+    - Use new spawn_item shortcut
+
+  Bugfixes:
+    - Fix trash_bin icon rename (again)
+---------------------------------------------------------------------------------------------------
 Version: 2.1.2
 Date: 2020-06-01
 
