--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.2.1
+Date: 2020-12-05
+
+  Bugfixes:
+    - Fix entities marked for deconstruction more: https://github.com/Roang-zero1/upgrade-planner-next/issues/14
+---------------------------------------------------------------------------------------------------
 Version: 2.2.0
 Date: 2020-12-05
 
